--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Primary Meta Tags -->
   <title>Renzo André | Frontend Developer</title>
   <meta name="title" content="Renzo André | Frontend Developer">
-  <meta name="description" content="Estudiante de Ingenieria de sistemas en la Universidad de Huánuco.">
+  <meta name="description" content="Estudiante de Ingeniería de sistemas en la Universidad de Huánuco.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
