--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://andresjosehr.com/">
+  <meta property="og:url" content="https://00andre00.github.io/">
   <meta property="og:title" content="Renzo André | Frontend Developer">
   <meta property="og:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
   <meta property="og:image" content="https://andresjosehr.com/assets/images/andresjosehr-preview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://andresjosehr.com/">
+  <meta property="twitter:url" content="https://00andre00.github.io/">
   <meta property="twitter:title" content="Renzo André | Frontend Developer">
   <meta property="twitter:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
   <meta property="twitter:image" content="https://andresjosehr.com/assets/images/andresjosehr-preview.png">
